--- a/react-badui/src/index.css
+++ b/react-badui/src/index.css
@@ -26,7 +26,7 @@ code {
 }
 
 #login label {
-  @apply select-none rounded-md border-black bg-white p-2 shadow-inner hover:cursor-text;
+  @apply h-9 select-none rounded-md border-black bg-white p-2 shadow-inner hover:cursor-text;
 }
 
 #clearButton,
