Somewhat completed captcha

--- a/react-badui/src/index.css
+++ b/react-badui/src/index.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 body {
+  @apply bg-gray-500;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -18,7 +19,7 @@ code {
 
 #username,
 #password {
-  @apply my-2 select-none rounded-sm bg-inherit p-1 font-semibold outline-none hover:cursor-default;
+  @apply my-2 select-none rounded-sm bg-inherit p-1 font-medium outline-none hover:cursor-default;
 }
 
 #login input::placeholder {
@@ -26,12 +27,12 @@ code {
 }
 
 #login label {
-  @apply h-9 select-none rounded-md border-black bg-white p-2 shadow-inner hover:cursor-text;
+  @apply h-9 select-none rounded-md border-black bg-slate-200 p-2 shadow-inner hover:cursor-text;
 }
 
 #clearButton,
 #loginButton {
-  @apply mt-4 rounded-md bg-blue-400 p-1 font-thin shadow-sm hover:cursor-pointer hover:bg-blue-500;
+  @apply mt-4 rounded-md bg-blue-400 p-1 shadow-sm hover:cursor-pointer hover:bg-blue-500;
 }
 
 #loginButton {
