--- a/react-badui/src/index.css
+++ b/react-badui/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  @apply bg-gray-500;
+  @apply bg-stone-200;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -27,18 +27,13 @@ code {
 }
 
 #login label {
-  @apply mx-4 h-9 select-none rounded-md border-black bg-slate-200 p-2 shadow-inner hover:cursor-text;
-}
-
-#clearButton,
-#loginButton {
-  @apply w-32 rounded-md bg-blue-500 p-1 font-medium shadow-md hover:cursor-pointer hover:bg-blue-600;
-}
-
-#loginButton {
-  @apply border-4 border-blue-500 bg-transparent hover:bg-blue-500 !important;
+  @apply mx-4 h-9 select-none rounded-md border-black bg-stone-200 p-2 shadow-inner hover:cursor-text;
 }
 
 #clearButton {
-  @apply text-white;
+  @apply w-20 rounded-lg bg-blue-500 p-2 text-lg font-medium text-white shadow-md hover:cursor-pointer hover:bg-blue-600;
+}
+
+#loginButton {
+  @apply text-5xl text-stone-200/40;
 }
