--- a/react-weather/src/index.css
+++ b/react-weather/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  @apply bg-zinc-400;
+  @apply bg-cyan-200;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -15,4 +15,26 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+#container {
+  @apply mx-auto max-w-4xl shadow-md rounded-xl h-[800px] bg-gradient-to-bl from-sky-400 to-sky-300 p-3 mt-10;
+}
+
+#window {
+  @apply basis-1/6 rounded-md shadow-md overflow-hidden m-2 flex flex-col 
+  text-lg justify-center text-center text-white font-medium bg-sky-500/50;
+}
+
+#window img {
+  @apply invert;
+}
+
+#window h1 {
+  @apply bg-sky-500 pt-2 p-1;
+}
+
+#window :first-child,
+:last-child {
+  @apply mb-2;
 }
