--- a/react-weather/src/index.css
+++ b/react-weather/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  @apply bg-cyan-200;
+  @apply bg-sky-100;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -18,20 +18,28 @@ code {
 }
 
 #container {
-  @apply mx-auto max-w-4xl shadow-md rounded-xl h-[800px] bg-gradient-to-bl from-sky-400 to-sky-300 p-3 mt-10;
+  @apply mx-auto max-w-4xl shadow-md rounded-xl h-[896px] bg-sky-400 p-5 mt-10;
+}
+
+#header {
+  @apply mx-auto max-w-xl flex justify-around text-white text-lg font-medium;
+}
+
+#header li a {
+  @apply hover:bg-gray-200/30 rounded-md px-3 py-1 cursor-pointer;
+}
+
+#windows {
+  @apply mx-auto flex flex-row h-full justify-center items-center;
 }
 
 #window {
   @apply basis-1/6 rounded-md shadow-md overflow-hidden m-2 flex flex-col 
-  text-lg justify-center text-center text-white font-medium bg-sky-500/50;
-}
-
-#window img {
-  @apply invert;
+  text-lg justify-center text-center text-white font-medium bg-sky-500/40;
 }
 
 #window h1 {
-  @apply bg-sky-500 pt-2 p-1;
+  @apply bg-sky-600 pt-2 p-1;
 }
 
 #window :first-child,
@@ -43,6 +51,7 @@ code {
   @apply flex flex-col items-center p-10 max-w-xl mx-auto 
   text-white font-light text-4xl text-center select-none;
 }
+
 #outside img {
-  @apply rounded-full w-96 h-96 bg-sky-500/50 p-3 shadow-lg mb-10;
+  @apply rounded-full w-96 h-96 shadow-lg mb-10;
 }
